Switch back to java8