@@ -1,11 +1,13 @@
 package lab1;
 
+import lombok.var;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.ByteArrayOutputStream;
 import java.io.FileInputStream;
 import java.io.FileReader;
 import java.io.PrintStream;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.function.BiConsumer;
@@ -16,8 +18,8 @@ import org.junit.jupiter.api.Test;
 import lombok.SneakyThrows;
 
 public class DumpClasses {
-  final Path resPath = Path.of(System.getenv("VJVM_TESTRES_PATH"));
-  final Path resultPath = Path.of(System.getenv("VJVM_TESTRESULT_PATH"));
+  final Path resPath = FileSystems.getDefault().getPath(System.getenv("VJVM_TESTRES_PATH"));
+  final Path resultPath = FileSystems.getDefault().getPath(System.getenv("VJVM_TESTRESULT_PATH"));
   final Path jarPath = resPath.resolve("lab1/cases/jar.jar");
 
   @Test
@@ -46,7 +48,7 @@ public class DumpClasses {
 
   @SneakyThrows
   void checkDump(String path, String clazz) {
-    var expected = Files.readString(resultPath.resolve(clazz.replace('.', '/') + ".dump"));
+    var expected = new String(Files.readAllBytes(resultPath.resolve(clazz.replace('.', '/') + ".dump")));
 
     // capture stdout
     var oldStdout = System.out;
